feat: update projects - create processor and notification projects